# dicomcriterion

./: HISTORY.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: build.yml
.kiro/specs/dicom-criterion-class/: design.md  requirements.md  tasks.md
.kiro/specs/package-rename-refactor/: design.md  requirements.md  tasks.md
.kiro/steering/: structure.md  tech.md
dicom_criterion/: criterion.py  exceptions.py  symbol.py
dicomcriterion/: __init__.py  criterion.py  functions.py  symbol.py
examples/: advanced_usage.py  basic_usage.py
tests/: test_criterion.py  test_exceptions.py  test_function_registry.py  test_functions.py  test_integration.py  test_symbol.py
